--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.7",
     "babel-loader": "^9.2.1",
     "dotenv": "^16.4.5",
+    "lottie-react": "^2.4.0",
     "lottie-web": "^5.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
